--- a/DRTApp/MainPage.xaml
+++ b/DRTApp/MainPage.xaml
@@ -1,29 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DRTApp.MainPage">
+             x:Class="DRTApp.MainPage"
+             BackgroundColor="White"
+             >
 
     <ScrollView>
         <VerticalStackLayout
             Padding="30,0"
             Spacing="25">
             <Image
-                Source="dotnet_bot.png"
+                Source="drt.png"
                 HeightRequest="185"
                 Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a hovercraft number nine" />
+                SemanticProperties.Description="DRT Logo" />
 
             <Label
-                Text="Hello, World!"
+                Text="Welcome to the Durham Region Transit bus tracking!"
                 Style="{StaticResource Headline}"
                 SemanticProperties.HeadingLevel="Level1" />
 
             <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
+                Text="Please enter your bus stop number."
                 Style="{StaticResource SubHeadline}"
                 SemanticProperties.HeadingLevel="Level2"
                 SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
 
+            <Entry
+                x:Name="myEntry"
+                Placeholder="Enter text here"
+                Text=""
+                Margin="10"/>
+                            
             <Button
                 x:Name="CounterBtn"
                 Text="Click me" 
