--- a/DRTApp/AppShell.xaml
+++ b/DRTApp/AppShell.xaml
@@ -5,8 +5,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:DRTApp"
     Shell.FlyoutBehavior="Disabled"
-    Shell.TabBarIsVisible="False"
-    Title="DRTApp">
+    Shell.NavBarIsVisible="False"
+    Title="DRT: Cross-Platform Bus Tracking">
 
     <ShellContent
         Title="Home"
