--- a/DRTApp/MainPage.xaml
+++ b/DRTApp/MainPage.xaml
@@ -28,10 +28,10 @@
                 Padding="10"
                 Margin="0,0,0,25"
                 CornerRadius="0">
-                <Image
-                    Source="fakemap.png"
-                    Aspect="AspectFit"
-                    SemanticProperties.Description="Fake map" />
+                <WebView x:Name="WebMapArea"
+                        Source="https://www.example.com"
+                        VerticalOptions="FillAndExpand"
+                        HorizontalOptions="FillAndExpand" />
             </Frame>
 
             <StackLayout Spacing="10">
